Add taskCount parameter to benchmark commands
Updated HOW_TO_RUN.md to include taskCount parameter for benchmark execution.